Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20068

History partition rotation is not done under LOCK TABLES

Details

    Description

      Due to partition rotation is done under lock_external() LOCK TABLES prevents table from further rotation checks. This may lead to partition overflow without any warnings.

      Reproduce:

      create or replace table t1 (x int) with system versioning partition by system_time limit 1;
      lock tables t1 write;
      insert into t1 values (0), (1), (2), (3);
      delete from t1 where x < 3;
      delete from t1;
      unlock tables;
      

      Attachments

        Issue Links

          Activity

            There are no comments yet on this issue.

            People

              midenok Aleksey Midenkov
              midenok Aleksey Midenkov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.