MDEV-20068 History partition rotation is not done under LOCK TABLES

Wrong value F_WRLCK for thr_lock_type.